correct value overflow un .card-work.card-outer & add space after img

--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -239,9 +239,9 @@ ul.row {
 }
 .card-work .card-outer {
     position: relative;
-    overflow: 0;
+    overflow: hidden;
 }
-.card-work .card-image img{
+.card-work .card-image img {
     height: 30rem;
     width: 100%;
     object-fit: cover;
